<resources>
    <string name="app_name">sorting</string>
    <string name="description_string">Enter below numbers, you want to sort. \n
        Each number should be separated by space or \",\" \n
        eg.: 1, 11, 2, 22, 3, 33 \n
        or: 1 11 2 22 3 33</string>
    <string name="your_numbers">your numbers</string>
    <string name="sort">Sort</string>
    <string name="bubble_sort">bubble sort</string>
    <string name="quick_sort">quick sort</string>
    <string name="select_method">Select sorting method</string>
</resources>