<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="354dp"
        android:layout_height="0dp"
        android:layout_marginTop="102dp"
        android:layout_marginBottom="14dp"
        android:text="@string/description_string"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/numbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/numbers"
        android:layout_width="297dp"
        android:layout_height="54dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/your_numbers"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/select_method"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sortingMethodRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbers" />

    <RadioGroup
        android:id="@+id/sortingMethodRadioGroup"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        android:textAlignment="center"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/bubbleSortRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="17dp"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:shadowColor="#FFFFFF"
            android:text="@string/bubble_sort"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <RadioButton
            android:id="@+id/quickSortRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:text="@string/quick_sort"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="22dp"
        android:onClick="buttonAction"
        android:text="@string/sort"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortingMethodRadioGroup" />

    <TextView
        android:id="@+id/result"
        android:layout_width="273dp"
        android:layout_height="115dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="92dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortingMethodRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>